# sdl3-test

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: character.c  main.c  resource.c  ui.c
